--- a/js_20250625/血型.html
+++ b/js_20250625/血型.html
@@ -1,70 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        // 血型判斷
-        // A,B,O,AB
+      // 血型判斷
+      // A,B,O,AB
 
-        // 建立一個血型變數存放使用者輸入的血型
-        var blood = "";
-        // 輸入視窗
-        // 將輸入的資料轉成大寫=>toUpperCase()
-        // 將輸入的資料轉成大寫=>toLowerCase()
-        blood = prompt("請輸入血型");
+      // 建立一個血型變數存放使用者輸入的血型
+      var blood = "";
+      // 輸入視窗
+      // 將輸入的資料轉成大寫=>toUpperCase()
+      // 將輸入的資料轉成小寫=>toLowerCase()
+      blood = prompt("請輸入血型");
 
-        // if (blood == "A" || blood == "a") {
-        //     console.log("A型");
-        // } else if (blood == "B" || blood == "b") {
-        //     console.log("B型");
-        // } else if (blood == "O" || blood == "o") {
-        //     console.log("O型");
-        // } else if (blood == "AB" || blood == "ab" || blood == "Ab" || blood == "aB") {
-        //     console.log("AB型");
-        // } else {
-        //     console.log(blood + "=>此血型不存在");
-        // }
+      if (blood == "A" || blood == "a") {
+        console.log("A型");
+      } else if (blood == "B" || blood == "b") {
+        console.log("B型");
+      } else if (blood == "O" || blood == "o") {
+        console.log("O型");
+      } else if (
+        blood == "AB" ||
+        blood == "ab" ||
+        blood == "Ab" ||
+        blood == "aB"
+      ) {
+        console.log("AB型");
+      } else {
+        console.log(blood + "=>此血型不存在");
+      }
 
-        // 若是上面有加toUpperCase(),小寫的部分就可以不用寫
-        // 若是上面有加toLowerCase(),大寫的部分就可以不用寫
-         blood = prompt("請輸入血型").toUpperCase();
-        // if (blood == "A" || blood == "a") {
-        //     console.log("A型");
-        // } else if (blood == "B" || blood == "b") {
-        //     console.log("B型");
-        // } else if (blood == "O" || blood == "o") {
-        //     console.log("O型");
-        // } else if (blood == "AB" || blood == "ab" || blood == "Ab" || blood == "aB") {
-        //     console.log("AB型");
-        // } else {
-        //     console.log(blood + "=>此血型不存在");
-        // }
+      // 若是上面有加toUpperCase(),小寫的部分就可以不用寫
+      // 若是上面有加toLowerCase(),大寫的部分就可以不用寫
+      blood = prompt("請輸入血型").toUpperCase();
+      // if (blood == "A" || blood == "a") {
+      //     console.log("A型");
+      // } else if (blood == "B" || blood == "b") {
+      //     console.log("B型");
+      // } else if (blood == "O" || blood == "o") {
+      //     console.log("O型");
+      // } else if (blood == "AB" || blood == "ab" || blood == "Ab" || blood == "aB") {
+      //     console.log("AB型");
+      // } else {
+      //     console.log(blood + "=>此血型不存在");
+      // }
 
-
-        // 多層檢查方法2
-        switch (blood) {
-            case "A":
-                console.log("A型");
-                break;
-            case "B":
-                console.log("B型");
-                break;
-            case "O":
-                console.log("O型");
-                break;
-            case "AB":
-                console.log("AB型");
-                break;
-            default:
-                console.log(blood + "=>此血型不存在");
-        }
+      // 多層檢查方法2
+      switch (blood) {
+        case "A":
+          console.log("A型");
+          break;
+        case "B":
+          console.log("B型");
+          break;
+        case "O":
+          console.log("O型");
+          break;
+        case "AB":
+          console.log("AB型");
+          break;
+        default:
+          console.log(blood + "=>此血型不存在");
+      }
     </script>
-</body>
-
+  </body>
 </html>
