--- a/程式練功/01-成流控制-判斷式/兩數最大值.html
+++ b/程式練功/01-成流控制-判斷式/兩數最大值.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <script>
-      //3+2=5
-      // document.write('3+2=');
-      // document.write(3+2);
-
-      // 合併
-      // document.write('3+2='+(3+2));
+      var n1 = 3;
+      var n2 = 5;
+      if (n1 > n2) {
+        console.log(`max=${n1}`);
+      } else {
+        console.log(`max=${n2}`);
+      }
     </script>
   </body>
 </html>
