--- a/程式練功/01-成流控制-判斷式/水費查詢程式.html
+++ b/程式練功/01-成流控制-判斷式/水費查詢程式.html
@@ -19,7 +19,12 @@
       console.log(Math.round(`${water * 11.55}`));
     } else if (water > 50) {
       console.log(Math.round(`${ water * 12.075}`));
+    }else{
+      console.log("度數有誤");
     }
+
+// Math.floor為無條件捨去  Math.ceil:正數無條件進位 有小數點的負數會捨去小數點留下整數
+
   </script>
 </body>
 
