--- a/程式練功/01-成流控制-判斷式/分數等級.html
+++ b/程式練功/01-成流控制-判斷式/分數等級.html
@@ -1,22 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <script>
-      var score = 70;
-      if (score <= 100 && score >= 80) {
-        console.log(`${score}=>成績等級為甲等`);
-      } else if (score <= 79 && score >= 70) {
-        console.log(`${score}=>成績等級為乙等`);
-      } else if (score <= 69 && score >= 60) {
-        console.log(`${score}=>成績等級為丙等`);
-      } else if (score <= 59 && score >= 0) {
-        console.log(`${score}=>成績等級為丁等`);
-      }
-    </script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+</head>
+
+<body>
+  <script>
+    // var score = -1;
+    // // 要先寫錯誤的發生狀況
+    // if (score > 100 || score < 0) {
+    //   console.log(`${score}=>成績不是有效範圍`);
+    // } else if (score <= 100 && score >= 80) {
+    //   console.log(`${score}=>成績等級為甲等`);
+    // } else if (score <= 79 && score >= 70) {
+    //   console.log(`${score}=>成績等級為乙等`);
+    // } else if (score <= 69 && score >= 60) {
+    //   console.log(`${score}=>成績等級為丙等`);
+    // } else if (score <= 59 && score >= 0) {
+    //   console.log(`${score}=>成績等級為丁等`);
+    // }
+
+
+    // 另一種寫法
+    var intScore = -1;
+    var strLevel = "";
+
+    if (intScore < 0 || intscore > 100) {
+      console.log("err!不是有效數值範圍");
+    } else {
+         if (intscore <= 100 && intScore >= 80) {
+             strLevel = "甲";
+        } else if (intScore <= 79 && intScore >= 70) {
+             strLevel = "乙";
+        } else if (intScore <= 69 && intScore >= 60) {
+             strLevel = "丙";
+        } else {
+             strLevel = "丁";
+        }
+      console.log(`分數:${intScore}=>成績等即為${strlevel}等`)
+    }
+
+  </script>
+</body>
+
 </html>
