--- a/js_20250703/03.html
+++ b/js_20250703/03.html
@@ -8,24 +8,36 @@
 </head>
 
 <body>
-    <label for="">數值1</label>
+    <!-- label:標籤 -->
+    <label for="n1">數值1</label>
+    <!-- 文字方塊 -->
     <input type="number" id="n1">
     <br>
-    <label for="">數值2</label>
+    <label for="n2">數值2</label>
     <input type="number" id="n2">
     <button onClick="tot()">加總</button>
     <br>
     <p id="result">合計結果</p>
     <script>
+        // // 查看資料型別 typeof
+        // console.log("轉換前=>" + typeof n1.value);
+        // // 字串轉數值 parseInt
+        // console.log("字串轉數值=>" + typeof parseInt(n1.value));
+        // // 數值轉字串 toString
+        // var strNum = 123;
+        // console.log("數值轉字串=>" + typeof strNum.toString());
+
+
+
         // 建立一個加總函式
         function tot() {
             // 取得數值1的位置的內容
             var n1 = document.getElementById("n1");
             // 取得數值2的位置的內容
-            var n1 = document.getElementById("n2");
-            
+            var n2 = document.getElementById("n2");
+
             // 取得數值1的內容，顯示在指定的位置
-            document.getElementById("result").textContent = n1.value+n2.value;
+            document.getElementById("result").textContent = parseInt(n1.value) + parseInt(n2.value);
         }
 
     </script>
