--- a/js_20250707/test(array_數字大小).html
+++ b/js_20250707/test(array_數字大小).html
@@ -1,13 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        
+        let arr1 = [5, 60, 3, 90, 33, 1, 100];
+        let min = arr1[0];
+        let max = arr1[1];
+        // // for
+        for (let i = 0; i < arr1.length; i++) {
+            if (arr1[i] < min) min = arr1[i];
+            if (arr1[i] > max) max = arr1[i];
+        }
+        console.log(`最小值:${min},最大值:${max}`);
+
+        //for of
+        for (let n of arr1) {
+            if (n < min) min = n;
+            if (n > max) max = n;
+        }
+        console.log(`最小值:${min},最大值:${max}`);
+
+        // // forEach
+        // arr1.forEach((n) => {
+        //     if (n < min) min = n;
+        //     if (n > max) max = n;
+        // })
+        // console.log(`最小值:${min},最大值:${max}`);
+
     </script>
 </body>
+
 </html>
