--- a/js_20250707/test(array_數字大小).html
+++ b/js_20250707/test(array_數字大小).html
@@ -26,12 +26,12 @@
         }
         console.log(`最小值:${min},最大值:${max}`);
 
-        // // forEach
-        // arr1.forEach((n) => {
-        //     if (n < min) min = n;
-        //     if (n > max) max = n;
-        // })
-        // console.log(`最小值:${min},最大值:${max}`);
+        // forEach
+        arr1.forEach((n) => {
+            if (n < min) min = n;
+            if (n > max) max = n;
+        })
+        console.log(`最小值:${min},最大值:${max}`);
 
     </script>
 </body>
