--- a/js_20250707/test(array_數字大小).html
+++ b/js_20250707/test(array_數字大小).html
@@ -20,6 +20,8 @@
         console.log(`最小值:${min},最大值:${max}`);
 
         //for of
+        min = arr1[0];
+        max = arr1[1];
         for (let n of arr1) {
             if (n < min) min = n;
             if (n > max) max = n;
@@ -27,12 +29,38 @@
         console.log(`最小值:${min},最大值:${max}`);
 
         // forEach
+        min = arr1[0];
+        max = arr1[1];
+
         arr1.forEach((n) => {
             if (n < min) min = n;
             if (n > max) max = n;
         })
         console.log(`最小值:${min},最大值:${max}`);
 
+
+        // map
+
+        min = arr1[0];
+        max = arr1[1];
+        arr1.map((n) => {
+            if (n < min) min = n;
+            if (n > max) max = n;
+        })
+        console.log(`最小值:${min},最大值:${max}`);
+
+        // sort
+        arr1.sort((a, b) => {
+            return a - b;
+        })
+        console.log(`最小值:${arr1[0]},最大值:${arr1[arr1.length - 1]}`);
+
+        // 數學類別
+        // 最大值=>Math.max()
+        // 最小值=>Math.min()
+        max = Math.max(...arr1);
+        min = Math.min(...arr1);
+        console.log(`最小值:${min},最大值:${max}`);
     </script>
 </body>
 
