--- a/js_20250714/03.html
+++ b/js_20250714/03.html
@@ -21,6 +21,17 @@
             return a+b;
         }
         console.log(add2());
+        // 3.有參數，無回傳值
+        function add3(n1,n2){
+            console.log(n1+n2);
+        }
+        add3(5,3);
+        // 3.有參數，有回傳值
+        function add4(n1,n2){
+            return n1+n2;
+        }
+        let tot=add4(5,3);
+        console.log(tot);
     </script>
 </body>
 </html>
